[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
url = "2.5.0"
tungstenite = "0.21.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
