[package]
name = "rust-ws"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-web = "4.4"
actix-web-actors = "4.1"

byteorder = "1.2"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
anyhow = "1.0.75"
